--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://arslanparkar.github.io/my-app",
   "name": "@landing/006-next",
   "version": "0.1.0",
   "private": true,
