--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://arslanparkar.github.io/my-app",
+    "homepage": "https://arslanparkar.github.io/arslan/tree/test-react",
   "name": "@landing/006-next",
   "version": "0.1.0",
   "private": true,
